--- a/src/index.css
+++ b/src/index.css
@@ -912,4 +912,44 @@ body {
     width: 30px;
     height: 30px;
   }
+
+  .continer-main-5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+  }
+
+  .main-5-card {
+    height: 721px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .margin-main-ul {
+    margin: 80px 0px;
+  }
+
+  .hei {
+    height: 600px;
+    margin-top: 80px;
+    margin-bottom: 50px;
+  }
+  .margin-3-footer {
+    margin-top: 20px;
+  }
+  .top-1-1 {
+    margin-top: 20px;
+  }
+  .hei2 {
+    height: 845px;
+    margin-top: 80px;
+    margin-bottom: 50px;
+  }
+
+  .margin-top-top {
+    margin-top: 50px;
+    margin-bottom: 80px;
+  }
 }
