--- a/src/App.css
+++ b/src/App.css
@@ -724,4 +724,34 @@
     letter-spacing: 0em;
     text-align: center;
   }
+
+  .centr-paragraf {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+  .subtitle-text-51 {
+    font-family: Bebas Neue;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+
+.paragraf-main-51 {
+  font-family: Open Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 20px;
+  width: 100%;
+}
 }
