--- a/src/index.css
+++ b/src/index.css
@@ -693,10 +693,8 @@ body {
 
 @media (max-width: 600px) {
   body {
-    background-image: url(../src/image/mob.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 10000px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .app {
     display: none;
@@ -724,13 +722,12 @@ body {
   }
   .app-2 {
     padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 
   label .menu {
     position: fixed;
     right: 50px;
+    top: 35px;
     z-index: 100;
     background: #fff;
     border-radius: 50% 50% 50% 50%;
@@ -739,11 +736,9 @@ body {
     cursor: pointer;
   }
 
-  .header-2-container-1 {
-    position: relative;
-  }
+
   label .hamburger {
-    position: fixed;
+    position: absolute;
     width: 30px;
     height: 3px;
     background: rgb(0, 0, 0);
@@ -951,5 +946,35 @@ body {
   .margin-top-top {
     margin-top: 50px;
     margin-bottom: 80px;
+  }
+
+  .hei3 {
+      height: 779px;
+      margin-top: 0px;
+      margin-bottom: 50px;
+  }
+  .paragraf-main-5 {
+    padding: 0 20px;
+  }
+
+
+
+  .centr-paragraf {
+    margin: 30px 0px;
+  }
+
+
+
+  .main-51-card  {
+      margin-top: 80px;
+      margin-bottom: 50px;
+      height: 681px;
+      width: 100%;
+  }
+
+  .img-main-10 {
+    position: relative;
+    z-index: 909099;
+    top: -100px;
   }
 }
