--- a/src/App.css
+++ b/src/App.css
@@ -788,4 +788,34 @@
     text-transform: uppercase;
     color: #343434;
   }
+  .card-title {
+    font-family: "Bebas Neue";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 117.5%;
+    text-align: center;
+    color: #343434;
+    margin-bottom: 60px;
+  }
+  .title-card-12 {
+    font-family: "Bebas Neue";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 117.5%;
+    text-align: center;
+    color: #0ba3f9;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  .paragraf-card-12 {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
 }
