--- a/src/App.css
+++ b/src/App.css
@@ -777,6 +777,7 @@
     text-align: center;
     color: #343434;
   }
+
   .num-footer {
     font-family: "Open Sans";
     font-style: normal;
@@ -788,6 +789,7 @@
     text-transform: uppercase;
     color: #343434;
   }
+
   .card-title {
     font-family: "Bebas Neue";
     font-style: normal;
@@ -798,6 +800,7 @@
     color: #343434;
     margin-bottom: 60px;
   }
+
   .title-card-12 {
     font-family: "Bebas Neue";
     font-style: normal;
@@ -809,6 +812,7 @@
     margin-top: 20px;
     margin-bottom: 10px;
   }
+
   .paragraf-card-12 {
     font-family: Open Sans;
     font-size: 14px;
@@ -818,4 +822,334 @@
     text-align: center;
   }
 
+  .card-title-52 {
+    font-family: Bebas Neue;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-bottom: 12px;
+  }
+
+  .title-transpot-52 {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+
+  .title-paragraf-52 {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  .cont2-title {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-left: 0px;
+  }
+
+  .cont4-title {
+    font-family: Bebas Neue;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+    height: 100%;
+    margin-left: 0px;
+    margin-bottom: 37px;
+  }
+
+  .cont3-paragraf3 {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: center;
+    height: 100%;
+    max-width: 100%;
+    margin-top: 20px;
+  }
+
+  .cont3-subparagraf {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+  .container-img-cont3 {
+    gap: 30px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
+
+  .title-cont4 {
+    font-family: Bebas Neue;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin: 0px;
+    width: 100%;
+  }
+
+  .li4 {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 117.5%;
+    text-align: center;
+    color: #343434;
+  }
+  .ul-title {
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: 0em;
+    text-align: center;
+    width: 100%;
+  }
+
+  .cont4-paragraf-2 {
+    width: 100%;
+    max-width: 100%;
+    margin: 0px;
+  }
+
+  .cont4-title-fotter {
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin: 0px;
+  }
+
+  .cont4-paragraf-fotter {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+  .cont4-title-1 {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .cont4-paragraf-2 {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  .contakt-top-title {
+    font-family: Bebas Neue;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+  .contakt-title {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+    text-transform: uppercase;
+    color: #343434;
+    margin-bottom: 0px;
+  }
+
+  .contakt-number {
+    font-family: Bebas Neue;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 10px;
+    letter-spacing: 0.105em;
+    text-align: center;
+    margin: 0px 0px;
+  }
+
+  .contakt-number a {
+    margin: 0 auto;
+  }
+
+  .container-1-contakt {
+    padding: 0px;
+    align-items: center;
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  .contakt-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+  }
+
+  .container-1-contakt-2 {
+    padding: 0px;
+    align-items: center;
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  .container-1-contakt-3 {
+    padding: 0px;
+    align-items: center;
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  .contakt-address {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  .time {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  .contakt-number {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    width: 100%;
+    text-align: left;
+  }
+  .contakt-title {
+    margin-bottom: 20px;
+  }
+  .container-contakt-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    height: 100%;
+    gap: 20px;
+    width: 300px;
+  }
+
+  .contakt-address-container {
+    align-items: center;
+  }
+  .mail-address {
+    font-family: Open Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  .container-contakt-2 {
+    margin: 20px;
+  }
+
+  .contakt-address-container {
+    width: 100%;
+  }
+
+  .container-contakt-2 {
+    align-items: left;
+  }
+
+  .footer-link {
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-bottom: 0px;
+  }
+
+  .footer-link {
+    margin-left: 0px;
+  }
+
+  .footer-link + .footer-link {
+    margin-left: 0px;
+  }
+
+  .tel-5-footer {
+    height: 24px;
+    width: 25.920001983642578px;
+  }
+
+  .mail-5-footer {
+    height: 20px;
+    width: 24.615385055541992px;
+  }
+
+  .paragraf-footer-5 {
+    font-family: Bebas Neue;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0.105em;
+    text-align: center;
+  }
+  .footer-contakt-5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .tellegram-footer {
+    height: 37px;
+    width: 37px;
+  }
+  .watsapp-footer {
+    height: 37px;
+    width: 37px;
+  }
 }
