--- a/src/index.css
+++ b/src/index.css
@@ -1233,4 +1233,9 @@ body {
     display: flex;
     flex-direction: column;
   }
+
+  .footer-container-bottom {
+    margin-top: 80px;
+    padding-bottom: 50px;
+  }
 }
